# factory-planner

./: .gitignore  ChangeLog.md  LICENSE  README.md  factory-planner.cabal  hsmatrixhelper.c  main.tex  makefile  package.yaml  solver.cabal  stack.yaml  test.lua
app/: Main.hs
src/: CSolve.hs~  LuaSolve.hs  Main.hs  Parse.hs~  Recipe.hs~  Recipes.hs  Solve.hs  Solver.hs  TestText.hs~
