name:                solver
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/alexloomis/solver#readme
license:             BSD3
license-file:        LICENSE
author:              Alex Loomis
maintainer:          atloomis@math.arizona.edu
copyright:           2020 Alex Loomis
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable solver
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
    , hmatrix

